Added End Game Stats on Victory and Loss Menus

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,7 +27,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@NIARAII
 LastExecutedLaunchName=NIARAII
 NewWindowPosition=(X=315,Y=143)
-NewWindowPosition=(X=855,Y=603)
+NewWindowPosition=(X=155,Y=115)
 LastExecutedPlayModeType=PlayMode_InNewProcess
 LastExecutedPlayModeType=PlayMode_InViewPort
 None=======
@@ -48,18 +48,14 @@ None=======
 
 [EditorStartup]
 LastLevel=/Game/ZTD_Blueprint/Maps/MapC_U_F
-LastLevel=/Game/ZTD_Blueprint/Maps/MapA
+LastLevel=/Game/ZTD_Blueprint/Maps/Menu_Main
 None=======
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 None=======
 None=======
-OpenAssetsAtExit=/Game/ZTD_Blueprint/dud/Zombie_Character.Zombie_Character
 OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/FlameTower/FlameTower.FlameTower
-OpenAssetsAtExit=/Game/ZTD_Blueprint/dud/RifleTower.RifleTower
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1762,6 +1758,16 @@ REINST_Zombie_Character_C_187.Replication=True
 REINST_Zombie_Character_C_187.Input=True
 REINST_Zombie_Character_C_187.Actor=True
 StaticMeshSocket.StaticMeshSocket=True
+TextBlock.Localization=False
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Style=True
+EditableTextBox.Appearance=True
+EditableTextBox.Behavior=True
+EditableTextBox.Performance=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Navigation=True
+EditableTextBox.Events=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -1783,13 +1789,14 @@ Tower_Tile_C.Actor=True
 WorldSettings.Physics=True
 Tower_Tile_C.Tick=True
 Tower_Tile_C.Replication=True
+IntProperty.Variable=True
 
 [DetailPropertyExpansion]
 OptionsMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.ItemStyle\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1835,9 +1842,9 @@ LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Content.Padding\" \"Object.Appearance.Background\" "
 Border="\"Object.Content.Padding\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ShadowColorAndOpacity\" "
-TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ShadowColorAndOpacity\" "
-TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Ingame_UI_C="\"Object.Appearance.ColorAndOpacity\" "
@@ -1880,9 +1887,9 @@ SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArra
 Gameover_front_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 REINST_Zombie_Character_C_582="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" \"Object.Packaging.MapsToCook.MapsToCook[0]\" \"Object.Packaging.MapsToCook.MapsToCook[1]\" \"Object.Packaging.MapsToCook.MapsToCook[2]\" \"Object.Packaging.MapsToCook.MapsToCook[3]\" "
-Gameover_back_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Gameover_back_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Tower_Tile_C="\"Object.Actor.PivotOffset\" "
+Tower_Tile_C=
 ParticleModuleVelocity="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModule="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
@@ -1913,6 +1920,8 @@ ParticleModuleRotationRateBase="\"Object.Rotation.StartRotationRate\" \"Object.R
 ParticleModuleTypeDataAnimTrail="\"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleTypeDataRibbon="\"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleTypeDataGpu="\"Object.Cascade.ModuleEditorColor\" "
+Victory_back_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+EditableTextBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ZTD_Blueprint/Blueprints/Game_UI/Pause_menu.Pause_menu=0
@@ -1942,7 +1951,7 @@ None=======
 /Game/ZTD_Blueprint/Maps/Protomap.Protomap:PersistentLevel.Protomap=0
 /Game/ZTD_Blueprint/Normal_Zombie_AI/AI_Controller.AI_Controller=0
 /Game/ZTD_Blueprint/Blueprints/HUD/ZombieHealthbar.ZombieHealthbar=0
-/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character=1
+/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character=0
 /Game/ZTD_Blueprint/Normal_Zombie_AI/AI_Blackboard.AI_Blackboard=1
 /Game/ZTD_Blueprint/Blueprints/HUD/Reticle.Reticle=0
 /Game/ZTD_Blueprint/Materials/Bullet.Bullet=0
@@ -1986,9 +1995,12 @@ None=======
 /Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character_C:Capsule_GEN_VARIABLE=1
 /Game/ZTD_Blueprint/Normal_Zombie_AI/Tower1_Gun.Tower1_Gun=1
 /Game/ZTD_Blueprint/dud/FlameTower.FlameTower=1
+/Game/ZTD_Blueprint/dud/Zombie_Character.Zombie_Character=1
+/Game/ZTD_Blueprint/Blueprints/FlameTower/FlameTower.FlameTower=0
+/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower=0
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=PIE
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
@@ -2009,7 +2021,7 @@ bMonitorEditorPerformance=True
 bShowCompilerLogOnCompileError=False
 bMapSkeletalMotionToRoot=False
 bSCSEditorShowFloor=False
-SCSViewportCameraSpeed=4
+SCSViewportCameraSpeed=2
 AssetViewerProfileIndex=0
 MaterialQualityLevel=1
 
@@ -2054,7 +2066,7 @@ bShowMobileStats=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/Menu
-ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Normal_Zombie_AI
+ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
@@ -2082,7 +2094,7 @@ GlobalAssetPicker.CurrentViewType=0
 ScreenPosition=X=-1272.000 Y=148.000
 ScreenPosition=X=22.000 Y=265.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1514.000 Y=876.000
+WindowSize=X=1534.000 Y=896.000
 None=======
 InitiallyMaximized=True
 
@@ -2724,14 +2736,14 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSett
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
 Zombie_Character_C=Zombie_Character_C.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
-K2Node_VariableGet=Zombie_Character_C.Collision.Collision,
-K2Node_VariableSet=Zombie_Character_C.Collision.Collision,
+K2Node_VariableGet=
+K2Node_VariableSet=
 StaticMesh=StaticMesh.LOD4.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD0.MeshBuildSettings,
 FloatProperty=
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.TreePivotPainter,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 Landscape=Landscape.Collision.Collision,
-BoolProperty=Zombie_Character_C.Collision.Collision,
+BoolProperty=
 IntProperty=
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Distribution,
 
