--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,9 +27,9 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@NIARAII
 LastExecutedLaunchName=NIARAII
 NewWindowPosition=(X=315,Y=143)
-NewWindowPosition=(X=155,Y=115)
+NewWindowPosition=(X=855,Y=603)
 LastExecutedPlayModeType=PlayMode_InNewProcess
-LastExecutedPlayModeType=PlayMode_InViewPort
+LastExecutedPlayModeType=PlayMode_InNewProcess
 None=======
 
 [WidgetTemplatesExpanded]
@@ -55,7 +55,7 @@ None=======
 CleanShutdown=True
 None=======
 None=======
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Player_Controller.Player_Controller
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1768,6 +1768,21 @@ EditableTextBox.Performance=True
 EditableTextBox.Render Transform=True
 EditableTextBox.Navigation=True
 EditableTextBox.Events=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Material=True
+MapA_C.Tick=True
+MapA_C.Replication=True
+MapA_C.Input=True
+MapA_C.Actor=True
+MixamoAnimBP_SWAT_C.Default=True
+MixamoAnimBP_SWAT_C.RootMotion=True
+MixamoAnimBP_SWAT_C.Optimization=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimationGraph.Graph=True
+Player_Character_C.Shape=True
+Player_Character_C.Navigation=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -1796,7 +1811,7 @@ OptionsMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Ob
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.ItemStyle\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1878,8 +1893,8 @@ REINST_Zombie_Character_C_336="\"Object.Character.Mesh.Object.Collision.BodyInst
 REINST_Zombie_Character_C_344="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 REINST_Zombie_Character_C_352="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 REINST_Zombie_Character_C_360="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshComponent=
+MeshComponent=
 PrimitiveComponent=
 CapsuleComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
@@ -1998,6 +2013,11 @@ None=======
 /Game/ZTD_Blueprint/dud/Zombie_Character.Zombie_Character=1
 /Game/ZTD_Blueprint/Blueprints/FlameTower/FlameTower.FlameTower=0
 /Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower=0
+/Game/ZTD_Blueprint/Blueprints/gun/weapon002Mat.weapon002Mat=1
+/Game/ZTD_Blueprint/Blueprints/gun/m4a1_s.m4a1_s=1
+/Game/MixamoAnimPack/Mixamo_SWAT/Mesh/Maximo_SWAT.Maximo_SWAT=1
+/Game/ZTD_Blueprint/Maps/MapA.MapA:PersistentLevel.MapA=1
+/Game/MixamoAnimPack/Mixamo_SWAT/Anims/MixamoAnimBP_SWAT.MixamoAnimBP_SWAT=1
 
 [MessageLog]
 LastLogListing=PIE
@@ -2050,9 +2070,9 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/ZTD_Blueprint/Maps/MapA
-MRUItem1=/Game/ZTD_Blueprint/Maps/MapC_U_F
-MRUItem2=/Game/ZTD_Blueprint/Maps/MapB
-MRUItem3=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem1=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem2=/Game/ZTD_Blueprint/Maps/MapC_U_F
+MRUItem3=/Game/ZTD_Blueprint/Maps/MapB
 MRUItem4=/Game/ZTD_Blueprint/Maps/MapC
 MRUItem5=/Game/ZTD_Blueprint/Maps/Protomap
 MRUItem6=/Game/ZTD_Blueprint/Maps/MapC_U
@@ -2089,14 +2109,34 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSizeScale=0.100000
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=ResourceSize
+SequenceBrowser.HiddenColumns=NumFrames
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveUIDList
+SequenceBrowser.HiddenColumns=Class
 
 [RootWindow]
 ScreenPosition=X=-1272.000 Y=148.000
-ScreenPosition=X=22.000 Y=265.000
+ScreenPosition=X=410.000 Y=249.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1534.000 Y=896.000
+WindowSize=X=1579.000 Y=1214.000
 None=======
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2117,12 +2157,12 @@ PrimType=1
 
 [Directories2]
 UNR=../../../../../Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
-UNR=../../../../../UE4 Projects/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
+UNR=../../../../../../Users/Macsm/Desktop/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
 None=======
 BRUSH=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBX=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBXAnim=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
-GenericImport=C:/Users/Jonathan/Desktop/map3_1.png
+GenericImport=../../../../../../Users/Macsm/Desktop/Zombie_TowerDefense/Meshes/m4a1/m4a1_s.obj
 GenericExport=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 GenericOpen=D:/Users/Bryan/Desktop/ZTD/Zombie_Tower_Defense/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
 GenericSave=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
@@ -2624,7 +2664,7 @@ BlueprintGraph.TimeStamp=2017.03.29-06.29.41
 BlueprintGraph.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2017.03.29-06.30.10
 SequencerWidgets.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2017.03.14-04.21.24
+HierarchicalLODUtilities.TimeStamp=2017.03.29-06.29.55
 HierarchicalLODUtilities.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2017.03.29-06.30.02
 MovieSceneCapture.LastCompileMethod=External
@@ -2633,16 +2673,23 @@ TextureEditor.LastCompileMethod=Unknown
 None=======
 NewLevelDialog.TimeStamp=2017.03.14-04.21.41
 NewLevelDialog.LastCompileMethod=Unknown
-StaticMeshEditor.TimeStamp=2017.03.14-04.22.00
-StaticMeshEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2017.03.29-06.30.14
+StaticMeshEditor.LastCompileMethod=External
 UATHelper.TimeStamp=2017.01.18-05.13.49
 UATHelper.LastCompileMethod=Unknown
 Cascade.TimeStamp=2017.01.18-05.13.04
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2017.01.18-05.13.10
 DistCurveEditor.LastCompileMethod=Unknown
+SkeletalMeshEditor.TimeStamp=2017.03.29-06.30.12
+SkeletalMeshEditor.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2017.03.29-06.30.12
+SkeletonEditor.LastCompileMethod=Unknown
+AnimationBlueprintEditor.TimeStamp=2017.03.29-06.29.38
+AnimationBlueprintEditor.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/gun/m4a1_s.m4a1_s;
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/FlameTower/FireStuff.FireStuff;
 RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character;
 RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Target.Target;
@@ -2662,7 +2709,6 @@ RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/Grenade.Grenade;
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower;
 RecentlyPlaced=/Game/Blueprints/Music3.Music3;
 RecentlyPlaced=/Game/Assets/Building_Asset_set_1/Street_environment_V01_City_building_011.Street_environment_V01_City_building_011;
-RecentlyPlaced=/Game/Assets/Building_Asset_set_1/Street_environment_V01_City_building_007.Street_environment_V01_City_building_007;
 None=======
 
 [LandscapeEdit]
@@ -2733,7 +2779,7 @@ SlateRemoteSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputS
 TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
-WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
+WorldSettings=WorldSettings.Lightmass.Lightmaps,WorldSettings.GameMode.SelectedGameModeDetails,
 Zombie_Character_C=Zombie_Character_C.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=
@@ -2836,5 +2882,58 @@ bSRGBEnabled=False
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
 Property=0.500000
 Value=1.000000
+
+[/Script/UnrealEd.PersonaOptions]
+ViewportBackgroundColor=(R=0.040000,G=0.040000,B=0.040000,A=0.000000)
+bAutoAlignFloorToMesh=True
+bMuteAudio=False
+ViewModeIndex=VMI_Lit
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.000000,G=1.000000,B=0.000000,A=1.000000)
+NotifyTimingNodeColor=(R=1.000000,G=0.000000,B=0.000000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseStandaloneAnimationEditors=True
+bUseInlineSocketEditor=False
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=False
+
+[/Script/UnrealEd.FbxStaticMeshImportData]
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bAutoGenerateCollision=True
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+NormalGenerationMethod=MikkTSpace
+
+[/Script/UnrealEd.FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bImportMeshesInBoneHierarchy=True
+bKeepOverlappingVertices=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+
+[/Script/UnrealEd.FbxTextureImportData]
+bInvertNormalMaps=False
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+
+[/Script/UnrealEd.FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
 
 
