Final touches on towers/balance

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,7 +27,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@NIARAII
 LastExecutedLaunchName=NIARAII
 NewWindowPosition=(X=315,Y=143)
-NewWindowPosition=(X=155,Y=115)
+NewWindowPosition=(X=315,Y=143)
 LastExecutedPlayModeType=PlayMode_InNewProcess
 LastExecutedPlayModeType=PlayMode_InViewPort
 None=======
@@ -52,10 +52,15 @@ LastLevel=/Game/ZTD_Blueprint/Maps/Menu_Main
 None=======
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/FlameTower/FlameTower.FlameTower
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/FlameTower/Passive.Passive
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/GrenadeTower.GrenadeTower
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/Grenade.Grenade
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1796,7 +1801,7 @@ OptionsMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Ob
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.ItemStyle\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1817,7 +1822,7 @@ LinuxTargetSettings="\"Object.Rendering.TargetedRHIs\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
 Info=
-Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
+Info=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget=
@@ -1892,7 +1897,7 @@ BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Tower_Tile_C=
 ParticleModuleVelocity="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
-ParticleModule="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModule="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
@@ -2049,14 +2054,14 @@ CurrentScalingGridSize=6
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/ZTD_Blueprint/Maps/MapA
-MRUItem1=/Game/ZTD_Blueprint/Maps/MapC_U_F
-MRUItem2=/Game/ZTD_Blueprint/Maps/MapB
-MRUItem3=/Game/ZTD_Blueprint/Maps/Menu_Main
-MRUItem4=/Game/ZTD_Blueprint/Maps/MapC
-MRUItem5=/Game/ZTD_Blueprint/Maps/Protomap
-MRUItem6=/Game/ZTD_Blueprint/Maps/MapC_U
-MRUItem7=/Game/ZTD_Blueprint/Maps/ZTD_Main
+MRUItem0=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem1=/Game/ZTD_Blueprint/Maps/ZTD_Main
+MRUItem2=/Game/ZTD_Blueprint/Maps/MapA
+MRUItem3=/Game/ZTD_Blueprint/Maps/MapC_U_F
+MRUItem4=/Game/ZTD_Blueprint/Maps/MapB
+MRUItem5=/Game/ZTD_Blueprint/Maps/MapC
+MRUItem6=/Game/ZTD_Blueprint/Maps/Protomap
+MRUItem7=/Game/ZTD_Blueprint/Maps/MapC_U
 MRUItem8=/Game/ZTD_Blueprint/Maps/Level_3
 MRUItem9=/Game/ZTD_Blueprint/Blueprints/Protomap
 
@@ -2643,12 +2648,12 @@ DistCurveEditor.TimeStamp=2017.01.18-05.13.10
 DistCurveEditor.LastCompileMethod=Unknown
 
 [PlacementMode]
-RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/FlameTower/FireStuff.FireStuff;
 RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character;
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/FlameTower/FlameTower.FlameTower;
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/FlameTower/FireStuff.FireStuff;
 RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Target.Target;
 RecentlyPlaced=/Script/Engine.NavModifierVolume;/Engine/Transient.ActorFactoryBoxVolume_12
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_11
-RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/FlameTower/FlameTower.FlameTower;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_4
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/Tower_Tile.Tower_Tile;
 RecentlyPlaced=/Game/Assets/foliage_pack/Meshes/Trees/SM_tree7.SM_tree7;
@@ -2745,7 +2750,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Te
 Landscape=Landscape.Collision.Collision,
 BoolProperty=
 IntProperty=
-ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Distribution,
+ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,
 
 [SelectionDetails]
 PreserveScaleRatio=True
